--- a/portfolio.html
+++ b/portfolio.html
@@ -13,16 +13,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="" class="img-fluid" alt="Picture of Cody"
+                    <img src="" class="img-fluid" alt="Picture of Cody">
                 </div>
                 <div class="col-md-6">
                     <h1>Cody's Portfolio</h1>
                     <h2>Racine</h2>
-                    <p>a;sdlkfj a;sdlkfj asd;flkj asd;lfkjqpowieur as;dlkfjpwqoiweur a;sdlkfja.dnv;asoiur tas;lkdfj as;dlfkj a;slkdfjpqwoiuer s;alkdjf as;lkjfa;sdifuo aspdofija;lkserm sa;oiduf pasod;ijfk;wqlkeruf ansdpoifu </p>
-                    <a href="https://github.com">
+                    <p>;alskdjf qpoweiur ;sldkjf a;slkdjfpqoiweur as;ldkfj a;sleiurpqw eiours;adlkfj qwpoeiur ;asldkfj </p>
+                    <a href="that">
                         <i class="bi bi-github fs-3"></i>
                     </a>
-                    <a href="https://linkedin.com">
+                    <a href="this">
                         <i class="bi bi-linkedin fs-3"></i>
                     </a>
     
